# CHIP-8

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: app  main.cpp  sdl_test
